--- a/STM32F4-Echo.ioc
+++ b/STM32F4-Echo.ioc
@@ -8,18 +8,15 @@ Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 ProjectManager.KeepUserCode=true
 PA10.Mode=Asynchronous
 Mcu.UserName=STM32F407VGTx
-Mcu.PinsNb=4
+Mcu.PinsNb=3
 Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
 ProjectManager.NoMain=false
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 RCC.PLLCLKFreq_Value=168000000
 PA9.GPIO_Label=USART1_TX
 RCC.PLLQCLKFreq_Value=84000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true
 PA9.GPIOParameters=GPIO_Label
-TIM6.Prescaler=8399
-VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 RCC.RTCFreq_Value=32000
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -29,23 +26,20 @@ PinOutPanel.RotationAngle=0
 RCC.FamilyName=M
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
-VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
-Mcu.IP4=TIM6
+Mcu.IP4=USART1
 RCC.FCLKCortexFreq_Value=168000000
-Mcu.IP5=USART1
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP0=DMA
 PA9.Mode=Asynchronous
 Mcu.IP1=NVIC
-TIM6.IPParameters=Prescaler,Period
 Mcu.UserConstants=
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 Mcu.ThirdPartyNb=0
-Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 RCC.HCLKFreq_Value=168000000
-Mcu.IPNb=6
+Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Mcu.IPNb=5
 RCC.I2SClocksFreq_Value=192000000
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=168000000
@@ -61,7 +55,6 @@ Mcu.Pin0=PA9
 Mcu.Pin1=PA10
 GPIO.groupedBy=
 Mcu.Pin2=VP_SYS_VS_Systick
-Mcu.Pin3=VP_TIM6_VS_ClockSourceINT
 RCC.VCOI2SOutputFreq_Value=384000000
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=25000000
@@ -86,7 +79,6 @@ RCC.EthernetFreq_Value=168000000
 Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-TIM6.Period=999
 Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
@@ -106,8 +98,8 @@ Mcu.Package=LQFP100
 NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
-Dma.USART1_TX.1.Mode=DMA_NORMAL
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+Dma.USART1_TX.1.Mode=DMA_NORMAL
 USART1.VirtualMode=VM_ASYNC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
@@ -123,8 +115,8 @@ RCC.HSI_VALUE=16000000
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.PLLM=8
 NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+RCC.PLLM=8
 RCC.PLLN=168
 Dma.Request1=USART1_TX
 RCC.APB1TimFreq_Value=84000000
@@ -132,8 +124,8 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Dma.USART1_RX.0.Mode=DMA_NORMAL
 Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-Dma.Request0=USART1_RX
 RCC.APB1Freq_Value=42000000
+Dma.Request0=USART1_RX
 Dma.USART1_RX.0.Instance=DMA2_Stream2
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F407VGTx
